@@ -1,3 +1,12 @@
+2020-08-03  Frederik Seiffert <frederik@algoriddim.com>
+
+  * Headers/Foundation/NSURL.h,
+  * Source/NSURL.h: Add NSURL methods:
+  - URLByAppendingPathComponent:isDirectory:
+  - isFileReferenceURL (always returns NO)
+  - fileReferenceURL
+  - filePathURL
+
 2020-08-02 Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Headers/Foundation/NSNotification.h: Add NSNotificatioName typedef
